added classNames to image divs in userShow. removed additional names. changed movies to watch from h1 to ptag and gave it a className

--- a/project/public/css/styles.css
+++ b/project/public/css/styles.css
@@ -3,6 +3,7 @@ body {
 	font-family: 'Rock Salt', cursive;
 	color: white;
 	font-size: 30px;
+	text-align: center;
 }
 
 h1 {
@@ -19,4 +20,12 @@ h1 {
 
 .username-login-form, .password-login-form, .username-signup-form, .password-signup-form {
 	color: black;
+}
+
+.movie-posters {
+	
+}
+
+.wanted-movies {
+
 }
